--- a/stylesheets1/font1.css
+++ b/stylesheets1/font1.css
@@ -2,7 +2,9 @@
     font-family: "gilroy";
     src: url("../gilroy/Gilroy-Bold.ttf") format("opentype");
     font-weight: 200;
-    font-style: normal; }
+    font-style: normal; 
+   }
+
 
  @font-face {
     font-family: "gilroy";
